--- a/package.json
+++ b/package.json
@@ -20,18 +20,22 @@
     "test": "echo 'No tests yet'"
   },
   "dependencies": {
+    "@guideai/session-processing": "workspace:*",
     "@guideai/types": "workspace:*",
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.87.4",
-    "@tauri-apps/api": "^1.5.6",
+    "@tauri-apps/api": "^2.3.0",
+    "@tauri-apps/plugin-shell": "^2.3.1",
+    "@tauri-apps/plugin-sql": "^2.3.0",
     "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "uuid": "^13.0.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.14",
+    "@tauri-apps/cli": "^2.3.1",
     "@types/node": "^22.10.6",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
