--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -12,14 +12,15 @@ rust-version = "1.60"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.5.5", features = [] }
+tauri-build = { version = "2", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.8"
-tauri = { version = "1.8.1", features = ["macos-private-api", "shell-open", "system-tray"] }
-tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
+tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
+tauri-plugin-sql = { version = "2", features = ["sqlite"] }
+tauri-plugin-shell = "2"
 dirs = "5.0"
 tokio = { version = "1", features = ["full"] }
 urlencoding = "2.1"
@@ -46,6 +47,10 @@ tracing-appender = "0.2"
 base64 = "0.22"
 # UUID generation
 uuid = { version = "1.0", features = ["v4"] }
+# SQLite database
+rusqlite = { version = "0.32", features = ["bundled"] }
+# Directory for database path
+lazy_static = "1.4"
 
 # macOS specific dependencies
 [target.'cfg(target_os = "macos")'.dependencies]
